--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"nanoid": "^3.1.20",
 		"next": "^10.0.3",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-toastify": "^6.2.0",
 		"sass": "^1.30.0"
 	},
 	"devDependencies": {
