--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-toastify": "^6.2.0",
-		"sass": "^1.30.0"
+		"sass": "^1.30.0",
+		"socket.io-client": "^3.0.4"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.13",
