--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"classnames": "^2.2.6",
 		"nanoid": "^3.1.20",
 		"next": "^10.0.3",
 		"react": "^17.0.1",
@@ -16,6 +17,7 @@
 		"socket.io-client": "^3.0.4"
 	},
 	"devDependencies": {
+		"@types/classnames": "^2.2.11",
 		"@types/node": "^14.14.13",
 		"@types/react": "^17.0.0",
 		"typescript": "^4.1.3"
